error.txt
Scanning dependencies of target test
[ 20%] Building CXX object CMakeFiles/test.dir/BilliardAnalyzer.cpp.o
/home/local/mirghom49577/Downloads/CV-Project/BilliardAnalyzer.cpp: In member function 'void BilliardAnalyzer::initializeTracking(const cv::Mat&)':
/home/local/mirghom49577/Downloads/CV-Project/BilliardAnalyzer.cpp:437:52: error: binding reference of type 'cv::Mat&' to 'const cv::Mat' discards qualifiers
  437 |     std::tie(ballCenters, ballRadii) = locateBalls(frame, tablePoints);
      |                                                    ^~~~~
/home/local/mirghom49577/Downloads/CV-Project/BilliardAnalyzer.cpp:206:97: note:   initializing argument 1 of 'std::tuple<std::vector<cv::Point_<float>, std::allocator<cv::Point_<float> > >, std::vector<float, std::allocator<float> > > BilliardAnalyzer::locateBalls(cv::Mat&, std::vector<cv::Point_<float> >)'
  206 | td::vector<cv::Point2f>, std::vector<float>> BilliardAnalyzer::locateBalls(cv::Mat& image, std::vector<cv::Point2f> tablePoints) {
      |                                                                            ~~~~~~~~~^~~~~

/home/local/mirghom49577/Downloads/CV-Project/BilliardAnalyzer.cpp: In member function 'std::vector<Ball> BilliardAnalyzer::trackBalls(const cv::Mat&)':
/home/local/mirghom49577/Downloads/CV-Project/BilliardAnalyzer.cpp:469:56: error: binding reference of type 'cv::Mat&' to 'const cv::Mat' discards qualifiers
  469 |         std::tie(ballCenters, ballRadii) = locateBalls(frame, tablePoints);
      |                                                        ^~~~~
/home/local/mirghom49577/Downloads/CV-Project/BilliardAnalyzer.cpp:206:97: note:   initializing argument 1 of 'std::tuple<std::vector<cv::Point_<float>, std::allocator<cv::Point_<float> > >, std::vector<float, std::allocator<float> > > BilliardAnalyzer::locateBalls(cv::Mat&, std::vector<cv::Point_<float> >)'
  206 | td::vector<cv::Point2f>, std::vector<float>> BilliardAnalyzer::locateBalls(cv::Mat& image, std::vector<cv::Point2f> tablePoints) {
      |                                                                            ~~~~~~~~~^~~~~

make[2]: *** [CMakeFiles/test.dir/build.make:82: CMakeFiles/test.dir/BilliardAnalyzer.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:95: CMakeFiles/test.dir/all] Error 2
make: *** [Makefile:103: all] Error 2
